# online-shop

./: pyproject.toml  run
online_shop/: settings.py
